--- a/2 Termo/AMB_PROG II/Semana 2 - Envio da atividade de Formatação (pode ser entregue em duplas)/ap2.css
+++ b/2 Termo/AMB_PROG II/Semana 2 - Envio da atividade de Formatação (pode ser entregue em duplas)/ap2.css
@@ -1,10 +1,6 @@
 /* Regra seletor universal */
 *{font-family: Arial;
 text-align: justify;
-margin-top: 12px;
-margin-bottom: 12px;
-margin-left: 100px;
-margin-right: 100px;
 font-size: 16px;}
 
 /* Regras classes não associadas */
@@ -24,6 +20,7 @@ font-size: 16px;}
 .italico{font-style: italic;}
 .letra-maior{font-size: 23px;}
 .sombra-extra{text-shadow: -1px -2px 10px rgb(12, 0, 10);}
+.sombra-extra1{text-shadow: -1px -2px 35px rgb(12, 0, 9);}
 .paragrafo-recuo{text-indent:-60px ;}
 
 
