arrumei o que a professora errou

--- a/4-Termo/LP_II/2_bimestre/Mongo/ex7_editar/views/produtos/produto.handlebars
+++ b/4-Termo/LP_II/2_bimestre/Mongo/ex7_editar/views/produtos/produto.handlebars
@@ -1,6 +1,6 @@
 <div class="produto-pag">
 
-    <a href="/"> Voltar </a>
+    <a href="/produtos"> Voltar </a>
     <h3>{{produto.nome}}</h3>
     <img src="{{produto.imagem}}" alt="{{produto.imagem}}">
     <p>R${{produto.preco}}</p>
